Update bulk inventory update, to have urgent & oversupply columns